--- a/CardioHealth/TasksAndSteps/Seven Day Allocation/Activity Tracking/APHActivityTracking.storyboard
+++ b/CardioHealth/TasksAndSteps/Seven Day Allocation/Activity Tracking/APHActivityTracking.storyboard
@@ -24,6 +24,12 @@
                                     <constraint firstAttribute="height" constant="1" id="0bX-A6-0LV"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8t5-tb-FTy">
+                                <rect key="frame" x="10" y="7" width="320" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mFa-Eb-zHV" userLabel="bottomLine" customClass="APCHorizontalThinLineView">
                                 <rect key="frame" x="0.0" y="36" width="320" height="1"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -84,8 +90,10 @@
                         </subviews>
                         <color key="backgroundColor" red="0.97254902124404907" green="0.97254902124404907" blue="0.97254902124404907" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="8t5-tb-FTy" firstAttribute="trailing" secondItem="IaW-xM-au3" secondAttribute="trailing" constant="10" id="8VB-sZ-MMg"/>
                             <constraint firstAttribute="trailing" secondItem="5zS-Qy-ghC" secondAttribute="trailing" id="8eU-wU-KoX"/>
                             <constraint firstAttribute="centerX" secondItem="1ZF-P2-foS" secondAttribute="centerX" id="JIw-oE-k4w"/>
+                            <constraint firstItem="8t5-tb-FTy" firstAttribute="top" secondItem="I1L-R2-NG9" secondAttribute="bottom" constant="6" id="Kxx-E4-ynZ"/>
                             <constraint firstItem="5zS-Qy-ghC" firstAttribute="bottom" secondItem="upX-AZ-JBq" secondAttribute="top" id="NOx-Ls-tHs"/>
                             <constraint firstItem="U6v-h5-YfZ" firstAttribute="leading" secondItem="IaW-xM-au3" secondAttribute="leading" id="OLD-8J-Y8Y"/>
                             <constraint firstItem="HdE-70-8Ae" firstAttribute="trailing" secondItem="XEY-UO-FTF" secondAttribute="trailing" constant="-1" id="PAS-4Z-CBp"/>
@@ -93,9 +101,11 @@
                             <constraint firstAttribute="trailing" secondItem="U6v-h5-YfZ" secondAttribute="trailing" id="U1v-9f-PwD"/>
                             <constraint firstItem="HdE-70-8Ae" firstAttribute="top" secondItem="XEY-UO-FTF" secondAttribute="bottom" constant="7" id="bQi-aY-VGc"/>
                             <constraint firstItem="mFa-Eb-zHV" firstAttribute="leading" secondItem="IaW-xM-au3" secondAttribute="leading" id="fiw-L1-5LG"/>
+                            <constraint firstItem="mFa-Eb-zHV" firstAttribute="top" secondItem="8t5-tb-FTy" secondAttribute="bottom" constant="6" id="hi6-zm-ejZ"/>
                             <constraint firstItem="5zS-Qy-ghC" firstAttribute="top" secondItem="U6v-h5-YfZ" secondAttribute="bottom" id="hre-Vw-Cgm"/>
                             <constraint firstAttribute="trailing" secondItem="mFa-Eb-zHV" secondAttribute="trailing" id="kB8-fX-jFk"/>
                             <constraint firstItem="upX-AZ-JBq" firstAttribute="top" secondItem="1ZF-P2-foS" secondAttribute="bottom" constant="74" id="lyF-JM-rkD"/>
+                            <constraint firstItem="8t5-tb-FTy" firstAttribute="leading" secondItem="IaW-xM-au3" secondAttribute="leading" constant="10" id="mfu-ML-nd8"/>
                             <constraint firstItem="5zS-Qy-ghC" firstAttribute="leading" secondItem="IaW-xM-au3" secondAttribute="leading" id="nkk-ex-o4f"/>
                             <constraint firstAttribute="trailing" secondItem="I1L-R2-NG9" secondAttribute="trailing" id="q9q-zh-fls"/>
                             <constraint firstItem="I1L-R2-NG9" firstAttribute="leading" secondItem="IaW-xM-au3" secondAttribute="leading" id="qEM-x8-3pV"/>
@@ -113,6 +123,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="chartView" destination="5zS-Qy-ghC" id="H3w-TY-Isq"/>
+                        <outlet property="daysRemaining" destination="8t5-tb-FTy" id="uEF-42-rUA"/>
                         <outlet property="infoIconButton" destination="HdE-70-8Ae" id="DIg-PF-4Gh"/>
                         <outlet property="segmentDays" destination="XEY-UO-FTF" id="e27-iu-z4E"/>
                     </connections>
