--- a/CardioHealth/TabBarControllers/Dashboard/APHDashboard.storyboard
+++ b/CardioHealth/TabBarControllers/Dashboard/APHDashboard.storyboard
@@ -167,7 +167,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 Days Remaining" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W6c-wS-SxS">
-                                            <rect key="frame" x="17" y="38" width="170.5" height="21"/>
+                                            <rect key="frame" x="17" y="38" width="171" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="bif-RU-Z2P"/>
                                             </constraints>
@@ -219,7 +219,7 @@
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blah Steps Today" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drW-30-AJ3">
-                                            <rect key="frame" x="187.5" y="38" width="170.5" height="21"/>
+                                            <rect key="frame" x="188" y="38" width="170" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
@@ -714,73 +714,41 @@
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8KA-hO-f9L">
+                                    <rect key="frame" x="0.0" y="43" width="320" height="1"/>
+                                    <color key="backgroundColor" red="0.85098039215686272" green="0.85098039215686272" blue="0.85098039215686272" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="Jcu-GB-081"/>
+                                    </constraints>
+                                </view>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
+                                <constraint firstAttribute="trailing" secondItem="8KA-hO-f9L" secondAttribute="trailing" id="0WM-UD-QVP"/>
+                                <constraint firstItem="8KA-hO-f9L" firstAttribute="leading" secondItem="NSx-ms-65A" secondAttribute="leading" id="Ccb-TA-BZN"/>
                                 <constraint firstAttribute="trailing" secondItem="Fn5-mm-6tC" secondAttribute="trailing" constant="15" id="FVK-gH-AdU"/>
                                 <constraint firstItem="Fn5-mm-6tC" firstAttribute="leading" secondItem="NSx-ms-65A" secondAttribute="leading" constant="15" id="GSh-1P-mFw"/>
+                                <constraint firstAttribute="bottom" secondItem="8KA-hO-f9L" secondAttribute="bottom" id="e8I-jh-GM3"/>
                                 <constraint firstAttribute="centerY" secondItem="Fn5-mm-6tC" secondAttribute="centerY" constant="0.5" id="vGQ-v3-Gvj"/>
                             </constraints>
                         </view>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="APCDashboardEditTableViewCell" rowHeight="59" id="bXM-MT-fM8" customClass="APCDashboardEditTableViewCell">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bXM-MT-fM8" id="gUp-V7-jDX">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="APCDashboardEditTableViewCell" rowHeight="59" id="8HK-DT-uYc" customClass="APCDashboardEditTableViewCell">
+                                <rect key="frame" x="0.0" y="-7" width="320" height="59"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8HK-DT-uYc" id="k1w-1I-maC">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RNf-yN-6aJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="1"/>
-                                            <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="1" id="UdC-7w-hhc"/>
-                                            </constraints>
-                                        </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="26C-32-vWV">
-                                            <rect key="frame" x="0.0" y="1" width="4" height="55"/>
-                                            <color key="backgroundColor" red="0.01176470588" green="0.62352941179999999" blue="0.87450980389999999" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="4" id="2XH-d5-EyB"/>
-                                            </constraints>
-                                        </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lvb-MH-Fgh">
-                                            <rect key="frame" x="0.0" y="56" width="320" height="1"/>
-                                            <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="1" id="VAx-Fv-uAr"/>
-                                            </constraints>
-                                        </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S6l-AU-smb">
-                                            <rect key="frame" x="0.0" y="57" width="320" height="3"/>
-                                            <color key="backgroundColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="3" id="Xqj-UB-hdK"/>
-                                            </constraints>
-                                        </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eEt-gP-2TY">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nwk-Rn-QWF">
                                             <rect key="frame" x="19" y="14" width="222" height="31"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="26C-32-vWV" secondAttribute="bottom" constant="-5" id="4N1-HB-TFQ"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="S6l-AU-smb" secondAttribute="trailing" constant="-8" id="8Ky-00-saB"/>
-                                        <constraint firstItem="RNf-yN-6aJ" firstAttribute="top" secondItem="gUp-V7-jDX" secondAttribute="topMargin" constant="-8" id="Clc-IY-wXy"/>
-                                        <constraint firstItem="26C-32-vWV" firstAttribute="top" secondItem="gUp-V7-jDX" secondAttribute="topMargin" constant="-7" id="NS8-QC-Jza"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="Lvb-MH-Fgh" secondAttribute="trailing" constant="-8" id="X5D-qP-e84"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Lvb-MH-Fgh" secondAttribute="bottom" constant="-6" id="dxc-at-tqw"/>
-                                        <constraint firstItem="Lvb-MH-Fgh" firstAttribute="leading" secondItem="gUp-V7-jDX" secondAttribute="leadingMargin" constant="-8" id="mvJ-C3-BKr"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="RNf-yN-6aJ" secondAttribute="trailing" constant="-8" id="sAG-GD-fDJ"/>
-                                        <constraint firstItem="26C-32-vWV" firstAttribute="leading" secondItem="gUp-V7-jDX" secondAttribute="leadingMargin" constant="-8" id="tXB-JG-Vod"/>
-                                        <constraint firstItem="S6l-AU-smb" firstAttribute="leading" secondItem="gUp-V7-jDX" secondAttribute="leadingMargin" constant="-8" id="uu5-aR-wPO"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="S6l-AU-smb" secondAttribute="bottom" constant="-9" id="zCe-h7-TZJ"/>
-                                        <constraint firstItem="RNf-yN-6aJ" firstAttribute="leading" secondItem="gUp-V7-jDX" secondAttribute="leadingMargin" constant="-8" id="zcK-nj-yDG"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="textLabel" destination="eEt-gP-2TY" id="xBO-y0-Ct6"/>
-                                    <outlet property="tintView" destination="26C-32-vWV" id="d7d-eu-gYZ"/>
+                                    <outlet property="textLabel" destination="Nwk-Rn-QWF" id="aGX-u7-qvp"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
